--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ proc-macro = true
 proc-macro2 = "1.0"
 quote = "1.0"
 syn = { version = "1.0.61", features = ["full", "visit-mut"] }
+convert_case = "0.4.0"
 
 [dev-dependencies]
 rustversion = "1.0"
